--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,30 @@
     --gris: #ecf0f5;
     --azul: #25476a;
 }
+
+html{
+    height: 100%;
+}
+body{
+    min-height: 100%;
+}
+body.login{
+    background-image: url(../img/libros.jpg);
+     background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat; 
+}
+body.login .contenido{
+    border-radius: 10px;
+    --webkit-box-shadow: 0px 17px 39px -6px rgba(0, 0, 0, .76);
+    --moz-box-shadow: 0px 17px 39px -6px rgba(0, 0, 0, .76);
+     box-shadow: 0px 17px 39px -6px rgba(0, 0, 0, .76);
+}
+.btn-primary,
+.bg-primary{
+    background-color: #03a9f4 !important;
+    border-color: #03a9f4;
+}
+.btn-primary:hover{
+    background-color: #04577e !important;
+}
