--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ body.login .contenido{
     --moz-box-shadow: 0px 17px 39px -6px rgba(0, 0, 0, .76);
      box-shadow: 0px 17px 39px -6px rgba(0, 0, 0, .76);
 }
+.bg-success,
+.btn-success{
+    background-color: #8bc34a !important;
+    border-color: #8bc34a!important;
+}
 .btn-primary,
 .bg-primary{
     background-color: #03a9f4 !important;
@@ -34,6 +39,12 @@ body.login .contenido{
     background-color: #04577e !important;
 }
 
+.bd-navbar{
+    position:-webkit-sticky;
+    position:sticky;
+    top: 0;
+    z-index: 1200;
+}
 /* Barra lateral */
 
 aside{
@@ -43,4 +54,22 @@ aside{
     margin-top: 56px;
     top: 0;
     bottom: 0;
+    aside:1000;
+}
+
+main{
+    margin-left: 260px;
+    position: relative; 
+    left:0;
+    min-height: 100%;
+}
+
+.botton{
+    min-height: 120px;
+}
+.botton i{
+    font-size: 3rem;
+}
+.botton a:hover{
+    color: white!important;
 }
